--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ dist/rpm/SOURCES/*
 dist/rpm/SRPMS/*
 fannie/pi_food_net
 fannie/pi_food_net/scalesDistro
+
+
+## generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
